univention-office365 (1.1.0-2) unstable; urgency=low

  * Issue #8662: improve group member management speed

 -- Daniel Troeder <troeder@univention.de>  Mon, 25 Sep 2017 11:10:55 +0200

univention-office365 (1.1.0-1) unstable; urgency=low

  * Issue #8662 (multi tenant support): add ext attribute and LDAP schema
  * add UCRVs to handle multi tenant support office365/tenant/alias/.*,
    office365/tenant/filter, office365/tenant/wizard
  * add multi tenant support to configuration file handling (and test)
  * add multi tenant support to wizard
  * add multi tenant support to scripts
  * listener LDAP filter can be modified with office365/tenant/filter to for
    example resync only one tenant or to disable a tenant
  * add multi tenant support to user listener (and tests)
  * add tenant name to all exception messages
  * improve logging
  * fix bug in udm hook
  * add ext attribute for groups
  * add multi tenant support to group listener (and tests)
  * improve exception messages and translations

 -- Daniel Troeder <troeder@univention.de>  Tue, 19 Sep 2017 09:39:55 +0200

univention-office365 (1.0.1-5) unstable; urgency=low

  * Bug #44836: update copyright

 -- Daniel Troeder <troeder@univention.de>  Mon, 18 Sep 2017 16:22:00 +0200

univention-office365 (1.0.1-4) unstable; urgency=low

  * Bug #44836: add http(s) proxy support
  * settings found in the following order will be used:
  * UCRVs office365/proxy/http(s), UCRVs proxy/http(s), environment

 -- Daniel Troeder <troeder@univention.de>  Mon, 18 Sep 2017 16:12:48 +0200

univention-office365 (1.0.1-3) unstable; urgency=medium

  * Bug #43995: Adapt invoke-rc.d calls

 -- Erik Damrose <damrose@univention.de>  Tue, 28 Mar 2017 16:58:58 +0200

univention-office365 (1.0.1-2) unstable; urgency=medium

  * Bug #43703: Update UCS screenshots

 -- Erik Damrose <damrose@univention.de>  Tue, 28 Mar 2017 12:17:19 +0200

univention-office365 (1.0.1-1) unstable; urgency=medium

  * Bug #43582: fix sanitizers API
